<resources>
    <string name="app_name">ElasClub</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="home">Home</string>
    <string name="produtos">Produtos</string>
    <string name="inicio">Bem-vindo ao app ElasClub!</string>
    <string name="login">LOGIN</string>
    <string name="cadastro">CADASTRE-SE</string>
    <string name="produto">CADASTRAR PRODUTO</string>
    <string name="novo">Cadastro de novo Produto</string>
    <string name="novo2">Cadastrar novo Produto</string>
    <string name="voltar">VOLTAR</string>
    <string name="lista">Lista de produtos</string>
    <string name="nenhum">Nenhum produto cadastrado</string>
    <string name="endereco">BUSCAR ENDEREÇO</string>
</resources>